[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"
name = "tests"
version = "0.0.0"

[dependencies]
fuel-gql-client = { version = "0.6.3", default-features = false }
fuel-tx = "0.9"
fuels-abigen-macro = "0.10.1"
fuels-contract = "0.10.1"
fuels-core = "0.10.1"
fuels-signers = "0.10.1"
fuels = "0.10.1"
rand = "0.8.5"

tokio = { version = "1.18", features = ["rt", "macros"] }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
